Refactor View monolith

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
-    <script defer src="https://buttons.github.io/buttons.js"></script>
+    <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
+    <script async defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
     <title>Elm App</title>
 </head>
 <body>
