--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/bulma.css"> -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
     <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
     <script async defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
     <title>Elm App</title>
