Modernize landing page

--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,14 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- <link rel="stylesheet" href="%PUBLIC_URL%/bulma.css"> -->
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500" rel="stylesheet"> 
+    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">  -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">  -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+    <!-- <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">  -->
     <!-- <script async defer src="https://buttons.github.io/buttons.js"></script> -->
-    <script async defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+    <!-- <script async defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script> -->
+    <script async defer src="%PUBLIC_URL%/fontawesome/fontawesome-all.js"></script>
     <title>Elm App</title>
 </head>
 <body>
