Add landing page animations for Firefox

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
     <script async defer src="%PUBLIC_URL%/fontawesome/fontawesome-all.js"></script>
     <script async defer src="%PUBLIC_URL%/pagescroll.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
     <title>Elm App</title>
 </head>
 <body>
