Fix animation on scroll for Chrome

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
-    <script async defer src="%PUBLIC_URL%/fontawesome/fontawesome-all.js"></script>
-    <script async defer src="%PUBLIC_URL%/pagescroll.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/wow/0.1.12/wow.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script defer async src="%PUBLIC_URL%/fontawesome/fontawesome-all.js"></script>
+    <script async src="%PUBLIC_URL%/noframework.waypoints.min.js"></script>
     <title>Elm App</title>
 </head>
 <body>
@@ -24,5 +23,6 @@
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script defer async src="%PUBLIC_URL%/animate.js"></script>
 </body>
 </html>
