Update header, footer, fonts, and results page

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet"> 
     <script defer async src="%PUBLIC_URL%/fontawesome/fontawesome-all.js"></script>
     <script async src="%PUBLIC_URL%/noframework.waypoints.min.js"></script>
     <script defer async src="%PUBLIC_URL%/animate.js"></script>
