--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/sample1.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500" rel="stylesheet">
