--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles/sample1.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500" rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/icons.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
     <script defer async src="%PUBLIC_URL%/fontawesome/fontawesome-all.js"></script>
-    <title>Elm App</title>
+    <title>Discover Now</title>
 </head>
 <body>
     <noscript>
