--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/static/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/static/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400&text=ExploreConnectLearn%20moreBacktohomePreview" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%2C%2D%2E" rel="stylesheet"> 
     <title>Discover Now</title>
 </head>
 <body>
